# pytest-html-report-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  sync-version-from-tag.yml
pytest_automation_report/: __init__.py  plugin.py
tests/: test_demo_screenshot.py  test_demo_suite_admin.py  test_demo_suite_checkout.py  test_plugin.py
