[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-html-report-builder"
version = "0.1.4"
description = "A pytest plugin that generates self-contained HTML automation reports with visual charts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Vidur Oberoi" }
]
classifiers = [
  "Framework :: Pytest",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pytest>=7.0",
]

[project.entry-points.pytest11]
automation-report = "pytest_automation_report.plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pytest_automation_report*"]

[project.urls]
Homepage = "https://github.com/viduroberoi/pytest-html-report-builder"
Repository = "https://github.com/viduroberoi/pytest-html-report-builder"
Issues = "https://github.com/viduroberoi/pytest-html-report-builder/issues"
